推送接口已完成，接收接口初步搭建。
Signed-off-by: ZS1994 <1217360619@qq.com>

--- a/check/src/main/webapp/WEB-INF/web.xml
+++ b/check/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,11 @@
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
 
+	<!-- *******自定义监听器：定时推送数据****** -->
+	<listener>  
+	  <listener-class>com.zs.listener.SendToZmListener</listener-class>  
+	</listener>
+
 <!-- 
 	<filter>
 	    <filter-name>httpHeaderFilter</filter-name>
