--- a/check/src/main/webapp/WEB-INF/web.xml
+++ b/check/src/main/webapp/WEB-INF/web.xml
@@ -33,11 +33,11 @@
 		<listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
 	</listener>
 
-	<!-- *******自定义监听器：定时推送数据****** 
+	<!-- *******自定义监听器：定时推送数据****** -->
 	<listener>  
 	  <listener-class>com.zs.listener.SendToZmListener</listener-class>  
 	</listener>
-	-->
+	
 
 <!-- 
 	<filter>
