--- a/check/src/main/webapp/WEB-INF/web.xml
+++ b/check/src/main/webapp/WEB-INF/web.xml
@@ -39,7 +39,9 @@
 	  <listener-class>com.zs.listener.SendToZmListener</listener-class>  
 	</listener>
 	 -->
-
+	<listener>  
+	  <listener-class>com.zs.listener.ObtainReportSignListener</listener-class>  
+	</listener>
 <!-- 
 	<filter>
 	    <filter-name>httpHeaderFilter</filter-name>
