数据库表修改，点击表格直接进行编辑的效果，一段码省份对照表已经实现，但同样的写法，运单信息查询一直报错，还待查错。
Signed-off-by: ZS1994 <1217360619@qq.com>

--- a/check/src/main/webapp/WEB-INF/web.xml
+++ b/check/src/main/webapp/WEB-INF/web.xml
@@ -61,7 +61,16 @@
 	    <filter-name>httpMethodFilter</filter-name>
 	    <servlet-name>SpringMVC</servlet-name>
 	</filter-mapping>
-
+	
+	<filter>
+        <filter-name>HttpMethodFilter</filter-name>
+        <filter-class>org.springframework.web.filter.HttpPutFormContentFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>HttpMethodFilter</filter-name>
+        <servlet-name>SpringMVC</servlet-name>
+    </filter-mapping>
+	
 	<!-- Spring MVC servlet -->
 	<servlet>
 		<servlet-name>SpringMVC</servlet-name>
