数据表格点击编辑已完成，之前的问题通过将数据写成url参数解决。
Signed-off-by: ZS1994 <1217360619@qq.com>

--- a/check/src/main/webapp/WEB-INF/web.xml
+++ b/check/src/main/webapp/WEB-INF/web.xml
@@ -42,16 +42,16 @@
 	  <listener-class>com.zs.listener.ObtainReportSignListener</listener-class>  
 	</listener>
 	 -->
-<!-- 
-	<filter>
+
+	<!-- <filter>
 	    <filter-name>httpHeaderFilter</filter-name>
 	    <filter-class>com.zs.tools.MyHiddenHttpMethodFilter</filter-class>
 	</filter>
 	<filter-mapping>
 	    <filter-name>httpHeaderFilter</filter-name>
 	    <servlet-name>SpringMVC</servlet-name>
-	</filter-mapping>
- -->
+	</filter-mapping> -->
+
 
 	<filter>
 	    <filter-name>httpMethodFilter</filter-name>
@@ -62,14 +62,14 @@
 	    <servlet-name>SpringMVC</servlet-name>
 	</filter-mapping>
 	
-	<filter>
-        <filter-name>HttpMethodFilter</filter-name>
+	<!-- <filter>
+        <filter-name>HttpPutFilter</filter-name>
         <filter-class>org.springframework.web.filter.HttpPutFormContentFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>HttpMethodFilter</filter-name>
+        <filter-name>HttpPutFilter</filter-name>
         <servlet-name>SpringMVC</servlet-name>
-    </filter-mapping>
+    </filter-mapping> -->
 	
 	<!-- Spring MVC servlet -->
 	<servlet>
