--- a/check/src/main/webapp/WEB-INF/web.xml
+++ b/check/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <listener>  
+	  <listener-class>com.zs.listener.KdniaoData</listener-class>  
+  </listener>
   <listener>
     <listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class>
   </listener>
@@ -46,10 +49,10 @@
     <servlet-name>SpringMVC</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <session-config>
+  <!-- <session-config>
     <session-timeout>480</session-timeout>
   </session-config>
   <welcome-file-list>
     <welcome-file>/jsp/iterm/login.jsp</welcome-file>
-  </welcome-file-list>
+  </welcome-file-list> -->
 </web-app>
